도시 분석 최적화와 초기 UI 복원